Updated Runner API spec
