# refactor/runner/app/api/api_v0/endpoints/task.py
@@ -27,28 +27,28 @@ from fastapi import APIRouter
 router = APIRouter()
 
 
-@router.post("/run/{dispatch_id}", status_code=202, response_model=RunTaskResponse)
+@router.post("/{dispatch_id}/task", status_code=202, response_model=RunTaskResponse)
 def run_task(*, dispatch_id: str, task_ids: List[int]) -> RunTaskResponse:
     """
-    API Endpoint (/api/task/run) to run tasks
+    API Endpoint (/workflow/task/run) to run tasks
     """
 
     return {"response": "execution of tasks started"}
 
 
-@router.get("/status/{dispatch_id}/{task_id}", status_code=200, response_model=TaskStatus)
+@router.get("/{dispatch_id}/task/{task_id}/status", status_code=200, response_model=TaskStatus)
 def check_status(*, dispatch_id: str, task_id: int) -> TaskStatus:
     """
-    API Endpoint (/api/task/status) to check status of a task
+    API Endpoint (/api/workflow/task/status) to check status of a task
     """
 
     return {"status": "running"}
 
 
-@router.post("/cancel/{dispatch_id}/{task_id}", status_code=200, response_model=CancelResponse)
+@router.delete("/{dispatch_id}/task/{task_id}/cancel", status_code=200, response_model=CancelResponse)
 def cancel_task(*, dispatch_id: str, task_id: int) -> CancelResponse:
     """
-    API Endpoint (/api/task/cancel) to cancel a task
+    API Endpoint (/api/workflow/task/cancel) to cancel a task
     """
 
     return {"cancelled_dispatch_id": f"{dispatch_id}", "cancelled_task_id": f"{task_id}"}
